adding more html

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body class="open-sans-normal">
     <header>
         <nav>
-            <h3 class="nav-title">Ma<span class="logoR">r</span>y</h3>
+            <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
-                <li><a href="">Portifolio</a></li>
-                <li><a href="">Blog</a></li>
-                <li><a href=""><button>Hire Me</button></a></li>
+                <li><a href="" class="dark-2">Portifolio</a></li>
+                <li><a href="" class="dark-2">Blog</a></li>
+                <li><a href=""><button class="btn">Hire Me</button></a></li>
             </ul>
         </nav>
     </header>
