--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
                 <li><a href=""><button class="btn">Hire Me</button></a></li>
             </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h4 class="banner-greetings dark-2">Hi, I  am</h4>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <p class="banner-desc">
+                    Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.
+                </p>
+                <button class="btn">Download CV</button>
+                <button class="btn">Contact</button>
+            </div>
+            <img class="profile-pic"src="images/hardy.png" alt="Mary Hardy Picture">
+        </div>
     </header>
     <main>
 
