--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body class="open-sans-normal">
-    <header>
+    <header class="second-bg">
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
@@ -23,7 +23,7 @@
             <div class="banner-content">
                 <h4 class="banner-greetings dark-2">Hi, I  am</h4>
                 <h1 class="banner-title">Mary Hardy</h1>
-                <p class="banner-desc">
+                <p class="banner-desc secction-desc">
                     Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.
                 </p>
                 <button class="btn">Download CV</button>
@@ -33,7 +33,10 @@
         </div>
     </header>
     <main>
-
+        <section class="aboutme secction-desc">
+            <h3 class="section-class">About Me</h3>
+            <p class="secction-desc">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+        </section>
     </main>
     <footer>
 
